# MIEngine

./: .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.cpp
.github/workflows/: cmake.yml
EngineIndependent/: MIBuffer.cpp  MIBuffer.h  MIFile.cpp  MIFile.h  MIFileMode.cpp  MIFileMode.h  MIInFile.cpp  MIInFile.h  MILogger.cpp  MILogger.h  MIOutFile.cpp  MIOutFile.h  MIString.cpp  MIString.h
EngineIndependent/Free Helpers/: MIAssert.h  MICommon.h  MIStringUtils.cpp  MIStringUtils.h
EngineIndependent/Templates/: MIArray.h  MIComparable.h  MIUtilities.h  MIVector.h
include/Engine Generation/: MIDerivedGen.h  MIGeneratorBase.h  README.txt
include/EngineIndependent/: MIBuffer.h
include/EngineIndependent/BasicTypes/: MIBuffer.h  MIFile.h  MIFileMode.h  MIRadixMap.h  MIString.h  MIStringHashMap.h
include/EngineIndependent/BasicTypes/StringHash/: HashString.h
include/EngineIndependent/Env/: MILogger.h
include/EngineIndependent/Free Helpers/: MIAssert.h  MILookupMap.h  MIPlatDefMacro.h
include/EngineIndependent/Memory/: MIBank.h  MIBankString.h  MIDynamicBank.h
include/EngineIndependent/Parsers/: MIRawParser.h  MITokenSimilarityParser.h  RegexParser.h
include/EngineIndependent/Templates/: Bounds.h  MIArray.h  MIArrayMap.h  MILinkedList.h  MILogicSequence.h  MIMVector.h  MIMap.h  MIPullValue.h  MIRange.h  MIUniquePtr.h  MIUtilities.h  MIVector.h
include/EngineTesting/: MIDetectionTests.h
include/InterpreterEngine/: MIFunction.h  MIRegisterTypes.h  MISymbolBank.h  MITypeData.h  MITypeHashMap.h
scripts/LINUX/: CompileNRun  CompileNTest
scripts/WIN/: CompileNRun.bat  CompileNTest.bat
src/: CMakeLists.txt
src/EngineIndependent/: CMakeLists.txt  MIBuffer.cpp  MIFileMode.cpp
src/EngineIndependent/BasicTypes/: CMakeLists.txt  MIBuffer.cpp  MIFile.cpp  MIString.cpp
src/EngineIndependent/Env/: CMakeLists.txt  MILogger.cpp  README.txt
src/EngineIndependent/Free Helpers/: CMakeLists.txt
src/EngineIndependent/Memory/: CMakeLists.txt  DynamicBank.cpp  MIBank.cpp  MIBankString.cpp
src/EngineIndependent/Parsers/: CMakeLists.txt  MIRawParser.cpp
src/InterpreterEngine/: CMakeLists.txt  MIRegisterTypes.cpp  MISymbolBank.cpp
tests/: BasicTypes.cpp  CMakeLists.txt  Console.cpp  TypeHash.cpp
(+21 files in other folders)
